--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* =======================font import====================  */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&family=Roboto:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&family=Roboto:wght@300;400&display=swap');
 /* ===============================root directory======================== */
 :root{
     --button:#E83A59;
@@ -13,6 +13,7 @@ body{
     margin: 0;
     padding: 0;
     font-family:'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 /* =============================================== navbar============================================ 
 */
@@ -47,10 +48,15 @@ body{
     display: block;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 100px;
 }
 .sec1 h1{
     font-size: 40px;
+    line-height: 50px;
+    font-family: "poppins", sans-serif;
+    font-weight: bold;
 }
+
 .flexible-container{
     /* display:  flex;
     justify-content: center;
@@ -82,19 +88,55 @@ body{
 }
 @keyframes camera {
     from{
-        right: -30%;
+        transform: translateX(400px);
     }
     to{
-        right: 10%;
+        transform: translateX(8px);
+        transform: translateY(30px);
     }
 }
 .camera{
     position: absolute;
-    right: 10%;
-    top: 25%;
     animation: camera 1.2s ease-in 1s 1  running ;
+    transform: translateX(400px);
+    transform: translateY(30px);
 }
 .camera img{
     width: 400px;
+
  
 }
+hr{
+    width: 1100px;
+}
+.shops{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 60px;
+}
+/* ============================================= Section 2 Popular Products ====================================== */
+.sec2{
+    width: 1047px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    
+}
+.section-title{
+    text-align: center;
+}
+.sec2-grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 42px;
+}
+.product-details{
+    padding: 12px;
+    line-height: 20px;
+}
+.price{
+    font-size: 25px;
+}
+
