--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
 /* ===============================root directory======================== */
 :root{
     --button:#E83A59;
+    --button-hover:#ff5373;
     --text-black: #3A3A3A;
     --text-gray: #787885;
     --orange: #FB8200;
-
+    --footer:#03203C;
 }
 /* ==========================================styles==================================================== */
 body{
@@ -21,12 +22,17 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 70px;
     height: 100px;
     margin-bottom: 20px;
 }
+.nav-width{
+    width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .logo{
     color: var(--text-black);
+    cursor: pointer;
 }
 .nav-bar a{
     text-decoration: none;
@@ -49,18 +55,17 @@ body{
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 100px;
+    
 }
 .sec1 h1{
     font-size: 40px;
     line-height: 50px;
     font-family: "poppins", sans-serif;
     font-weight: bold;
+    color: var(--text-black);
 }
 
 .flexible-container{
-    /* display:  flex;
-    justify-content: center;
-    align-items: center; */
     display: grid;
     grid-template-columns: repeat(2,1fr);
     align-items: center;
@@ -82,10 +87,15 @@ body{
    align-items: center;
    width: 28%;
 }
+.button:hover {
+    background-color: var(--button-hover);
+}
 .button i{
     font-size: 25px;
     margin-left: 10px;
 }
+/* ==============================keyframes====================================*/
+
 @keyframes camera {
     from{
         transform: translateX(400px);
@@ -97,7 +107,7 @@ body{
 }
 .camera{
     position: absolute;
-    animation: camera 1.2s ease-in 1s 1  running ;
+    animation: camera 1.2s linear 0s 1  ;
     transform: translateX(400px);
     transform: translateY(30px);
 }
@@ -108,6 +118,8 @@ body{
 }
 hr{
     width: 1100px;
+    border: 0.3px solid black;
+    opacity: 40%;
 }
 .shops{
     display: flex;
@@ -121,22 +133,131 @@ hr{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
+    margin-top: 90px;
+    margin-bottom: 100px;
     
 }
 .section-title{
     text-align: center;
+    color: var(--text-black);
 }
 .sec2-grid{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    column-gap: 42px;
+    column-gap: 35px;
+    row-gap: 42px;
+}
+.sec2 h2{
+    margin-bottom: 40px;
+    margin-left: -3px ;
 }
 .product-details{
     padding: 12px;
     line-height: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
 }
 .price{
     font-size: 25px;
+}
+.product-article{
+    color: var(--text-black);
+}
+.product-article .shifting{
+    line-height: 25px;
+    color: var(--text-gray);
+    font-weight: 600;
+}
+.product-article i{
+    color: var(--orange);
+}
+.rating-text{
+    margin-left: 8px;
+    font-size: 18px;
+}
+.see-more{  
+    font-weight: 600;
+    float: right;
+    margin-top: 25px;
+    word-spacing: 2px;
+}
+.see-more a{
+    text-decoration: none;
+    color: var(--button);
+    font-family: sans-serif;
+}
+/* ===========================================section 3 contact us ============================================= */
+.sec3{
+    display: block;
+    margin-right: auto;
+    margin-left:auto;
+    width: 1047px;
+}
+.sec3-grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 0px;
+    align-items: center;
+}
+.sec3-grid img{
+    width: 350px;
+    display: block;
+    margin: auto;
+
+}
+.sec3-img{
+ 
+    padding-top: 30px;
+}
+.sec3 input[type=text], textarea{
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 4px;
+    margin-bottom:5px;
+    resize: none;
+    
+    
+}
+label{
+    font-size: 14px;
+}
+.sec3 input[type=submit]{
+    background-color: var(--button);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   
+}
+.sec3 input[type=submit]:hover{
+    background-color: var(--button-hover);
+}
+.contact-container{
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 10px;
+    width: 100%;
+
+}
+.contact-details{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 100px;
+    border: none;
+}
+/* ===========================================================footer=================================================================== */
+
+footer{
+ background-color: var(--footer);
 }
 
