Solving many problems and making responsive

--- a/style.css
+++ b/style.css
@@ -70,11 +70,20 @@ body{
     grid-template-columns: repeat(2,1fr);
     align-items: center;
     column-gap: 40px;
+    /* display: flex;
+    align-items: center; */
 
 }
-.flexible-container img{
-    width: 80%;
+/* .flexible-container .article{
+    padding-right: 200px;
+} */
+.flexible-container .main-camera .bg img, .camera img{
+    width: 70%;
     margin-left: 100px;
+ 
+}
+.cam-circle{
+    display: none;
 }
 .button{
     text-decoration: none;
@@ -102,14 +111,14 @@ body{
     }
     to{
         transform: translateX(8px);
-        transform: translateY(30px);
+        transform: translateY(10px);
     }
 }
 .camera{
     position: absolute;
     animation: camera 1.2s linear 0s 1  ;
     transform: translateX(400px);
-    transform: translateY(30px);
+    transform: translateY(10px);
 }
 .camera img{
     width: 400px;
@@ -307,4 +316,89 @@ label{
     background-color: #5d5d7e;
     transition: all ease 0.3s;
 }
+/* =============================================================================================================================================
+                                                     media queries
+=============================================================================================================================================*/
 
+/* -------------------------------------------------- for mobile --------------------------------------------------------------------------- */
+
+@media only screen and (max-width:576px){
+    header{
+        display: none;
+    }
+    hr{
+        display: none;
+    }
+    .shops{
+        display: none;
+    }
+    .main-camera{
+        display: none;
+    }
+    .cam-circle{
+        display: block;
+        display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+    body{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        overflow-x: visible;
+    }
+
+.menu{
+    display: none;
+}
+.sec1{
+    width: 100%;
+}
+.flexible-container{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+}
+
+.flexible-container img{
+ 
+}
+.btn{
+    display: flex;
+    justify-content: center;
+}
+.flexible-container .article{
+    text-align: center;
+}
+.button{
+    width: 55%;
+}
+.sec2{
+    display: none;
+
+}
+.sec3{
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.footer{
+    display: none;
+}
+
+
+}
